[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "envyronment"
dynamic = ["version"]
description = "A tiny module to read environment variables and tranform them."
readme = "README.md"
license = "MIT"
requires-python = ">= 3.10"
authors = [
    { name="Sonny Valkeneers", email="sonny@softllama.net" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/shifqu/envyronment.git"
Issues = "https://github.com/shifqu/envyronment/issues"
ReleaseNotes = "https://github.com/shifqu/envyronment/releases"
Funding = "https://github.com/sponsors/shifqu"

[project.optional-dependencies]
dotenv = [
    "python-dotenv>=1.2",
]
dev = [
    "coverage>=7.11",
    "ruff>=0.14",
    "pylint<4.0",
    "pyright>=1.1",
]
build = [
    "build>=1.3",
    "twine>=6.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["B", "C901", "D", "E4", "E7", "E9", "F", "I", "W", "ARG", "FIX", "A"]
ignore = ["FIX002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pylint."MESSAGES CONTROL"]
disable = "all"
enable = "C1805,E1120,R1705,W0107,W0221,W0223,W0613,W0632,W0719,W2301,W3101"
